--- a/src/pages/school/school.html
+++ b/src/pages/school/school.html
@@ -1,4 +1,4 @@
-<ion-view view-title="学校情况统计" class="mylass myInfo indexPage school" cache-view='true'>
+<ion-view view-title="学校情况统计" class="myInfo indexPage school" cache-view='true'>
   <ion-header-bar align-title="center" class="head-bg">
     <div class="title titleStyle">
       学校情况统计
