--- a/src/pages/myClass/myClass.html
+++ b/src/pages/myClass/myClass.html
@@ -1,9 +1,9 @@
-<ion-view view-title="班级情况统计" class="mylass myInfo indexPage" cache-view='true'>
-  <ion-header-bar align-title="center"  class="head-bg">
+<ion-view view-title="班级情况统计" class="myClass myInfo indexPage" cache-view='true'>
+  <ion-header-bar align-title="center" class="head-bg">
     <div class="title titleStyle">
       班级情况统计
     </div>
-    <!--<img class="left-image" src="build/assets/img/myInfo/icon_select_list.png" ng-click="openPopover($event)"/>-->
+    <img class="left-image" src="build/assets/img/myInfo/icon_select_list.png" ng-click="changePage()"/>
     <img class="right-image" src="build/assets/img/indexPage/icon_select_time.png" ng-click="openPopover($event)"/>
   </ion-header-bar>
   <ion-content class="content-style" delegate-handle="mainScroll">
@@ -175,5 +175,55 @@
 
     </div>
     <!--global-container-->
+  </ion-content>
+
+
+  <div class="bar bar-subheader" ng-show="configList.showPageList">
+    <div class="row rowStyle">
+      <div class="col-33" ng-repeat="item in data.selectList" ng-click="selectAny(item)">{{item.name}}&nbsp;&nbsp;
+        <i ng-show="!item.select" class="ion-ios-arrow-down iconStyle"></i>
+        <i ng-show="item.select" class="ion-ios-arrow-up iconStyle"></i>
+      </div>
+    </div>
+    <div class="listSelectDetail" ng-if="item2.select" ng-repeat="item2 in data.selectList">
+      <div class="listSelect" ng-repeat="i in item2.list" ng-click="selectConfirm(i,item2)" ng-if="item2.select">
+        <div class="lineClass"></div>
+        <img ng-src="build/assets/img/indexPage/icon_choose.png" ng-show="">
+        <span ng-class="{'fontStyle':true,'fontSp':false}" ng-show="data.selectList[0].select">{{i}}</span>
+        <span ng-class="{'fontStyle':true,'fontSp':false}" ng-show="data.selectList[1].select">{{i.user_name}}</span>
+        <span ng-class="{'fontStyle':true,'fontSp':false}" ng-show="data.selectList[2].select">{{i.section_name}}</span>
+      </div>
+    </div>
+  </div>
+  <ion-content ng-show="configList.showPageList" class="content-style" style="margin-top: 44px;">
+    <div class="padding" delegate-handle="scrollList">
+      <div class="listDesc">共{{data.schoolList.length}}个</div>
+      <div class="list">
+        <a class="item item-avatar itemStyle" ng-repeat="school in data.schoolList" ng-click="goSchoolDetail()">
+          <img ng-src="{{school.school_img}}" class="imgStyle">
+          <div class="row rowStyleDetail">
+            <div class="col-60 schoolName">{{school.school_name}}<span>(20)</span></div>
+            <div class="col-40 schoolTime" ng-bind="school.create_time"></div>
+          </div>
+          <div class="row rowStyleDetail">
+            <div class="col-50 principal" ng-bind="school.teacher_name"></div>
+            <div class="col-50 saleName" ng-bind="school.user_name"></div>
+          </div>
+          <div class="row rowStyleDetail">
+            <div class="col-33 personName">实际人数&nbsp;{{school.teacher_num}}</div>
+            <div class="col-33 personName">架构人数&nbsp;{{school.arc_count}}</div>
+            <div class="col-33 personName">扫码&nbsp;{{school.scan_count}}</div>
+          </div>
+          <div class="schoolXZheng"><img src="">{{school.school_name}}</div>
+        </a>
+
+      </div>
+      <ion-infinite-scroll ng-if="true" on-infinite="" distance="1%" class="spinnerClass"
+                           ng-show="configList.nextPage"></ion-infinite-scroll>
+      <div class="text-center spinnerClass" ng-show="configList.nextPage">正在加载..</div>
+      <div class="text-center spinnerClassSp" ng-show="!configList.nextPage && data.schoolList.length>0">暂无更多数据</div>
+
+    </div>
+
   </ion-content>
 </ion-view>
