--- a/src/pages/myClass/classDetail/classDetail.html
+++ b/src/pages/myClass/classDetail/classDetail.html
@@ -4,7 +4,7 @@
     <span class="col-25 spanWidth">
       <button class="button button-icon icon ion-ios-arrow-left rowHeadButton" ng-click="goBack()"></button>
     </span>
-    <span class="col-50 rowHeadTitle">学校名称</span>
+    <span class="col-50 rowHeadTitle">班级信息</span>
     <span class="col-25">
       <!--<img class="right-image" src="build/assets/img/indexPage/icon_select_time.png" ng-click="openPopover($event)"/>-->
     </span>
@@ -30,7 +30,7 @@
           成员
         </div>
       </div>
-      <div class="padding content-style" style="min-height: 800px">
+      <div class="padding content-style" style="min-height: 800px;padding-top: 0">
         <div class="listDesc" ng-if="config.headStyleActive">共{{data.classListData.count}}位</div>
         <div class="listDesc" ng-if="!config.headStyleActive">共{{data.userListData.count}}位</div>
         <div class="list" ng-if="config.headStyleActive">
@@ -42,14 +42,13 @@
             </div>
             <div class="row rowStyleDetail">
               <div class="col-50 personName">{{i.subject_name}}</div>
-              <div class="col-50" style="text-align: right"
-                   ng-class="{'fontColor':config.font,'personName' :!config.font}">{{i.role}}
+              <div class="col-50 fontColor text-right" >{{i.role}}
               </div>
             </div>
           </a>
         </div>
 
-        <div class="list" ng-if="!config.headStyleActive">
+        <div class="list" ng-if="!config.headStyleActive" style="height: 100%;overflow: scroll">
           <a class="item item-avatar itemStyle" ng-repeat="i in data.userListData.member_list" ng-click="goSchoolDetail()">
             <img ng-src="{{i.avatar}}" class="imgStyle">
             <div class="row rowStyleDetail">
@@ -59,7 +58,7 @@
             <div class="row rowStyleDetail">
               <div class="col-50 personName">{{i.role}}<span ng-if="i.relation">-</span>{{i.relation}}</div>
               <div class="col-50" style="text-align: right"
-                   ng-class="{'fontColor':config.font,'personName' :!config.font}">{{i.speak_stype}}
+                   ng-class="{'fontColor': i.font,'personName' : !i.font}">{{i.speak_stype}}
               </div>
             </div>
           </a>
