--- a/src/pages/school/school.html
+++ b/src/pages/school/school.html
@@ -3,7 +3,7 @@
     <div class="title titleStyle">
       学校情况统计
     </div>
-    <img class="left-image" src="build/assets/img/myInfo/icon_select_list.png" ng-click="changePage()"/>
+    <!--<img class="left-image" src="build/assets/img/myInfo/icon_select_list.png" ng-click="changePage()"/>-->
     <img class="right-image" src="build/assets/img/indexPage/icon_select_time.png" ng-click="openPopover($event)"/>
   </ion-header-bar>
   <ion-content class="content-style" delegate-handle="mainScroll" ng-show="!configList.showPageList">
