--- a/src/pages/timeSelect/timeSelectData/timeSelectData.html
+++ b/src/pages/timeSelect/timeSelectData/timeSelectData.html
@@ -53,7 +53,7 @@
         <div class="row itemClass" ng-click="goList('4')">
           <div class="col-50 imageClass">
             <img src="build/assets/img/selectTime/zhengxiao@3x.png">
-            整校用户
+            整校学校数
           </div>
           <div class="col-50 numClass">
             {{newViewData.new_data.new_school || 0}}
