--- a/www/index.html
+++ b/www/index.html
@@ -46,5 +46,8 @@
 <div id="myToast" class="own-loading-container-android {{isVisible}} {{isActive}}">
   <div class="own-loading" ng-click="Toast.hide()"><span ng-bind="msg"></span></div>
 </div>
+<!--&lt;!&ndash;设置弹窗modal&ndash;&gt;-->
+<!--<div class="modalTab" ng-class="{'md-show-tab':true}" >-->
+<!--</div>-->
 </body>
 </html>
