--- a/src/pages/tab/tab.html
+++ b/src/pages/tab/tab.html
@@ -1,5 +1,5 @@
 
-<ion-view class="myTab" id="myTabId">
+<ion-view class="myTab" id="myTabId"  view-title="首页">
   <div ng-include="'build/pages/indexPage/indexPage.html'" ng-if="tabs[0].isActive" ng-controller="indexPageCtrl"></div>
   <div ng-include="'build/pages/myInfo/myInfo.html'" ng-if="tabs[1].isActive" ng-controller="myInfoCtrl"></div>
   <div ng-include="'build/pages/myClass/myClass.html'" ng-if="tabs[2].isActive" ng-controller="myClassCtrl"></div>
